# humanoid-robot-description

./: .gitignore  CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml  setup.py
hurodes/: __init__.py  contants.py  generator_base.py  humanoid.py  humanoid_robot.py  utils.py
hurodes/format_parser/: base_parser.py  mjcf_parser.py  urdf_parser.py
hurodes/generators/: README.md  README_zh.md  generator_base.py  hrdf_mixin.py
hurodes/hrdf/: __init__.py  actuator.py  body.py  geom.py  hrdf.py  joint.py  mesh.py  simple_geom.py
hurodes/joint_mapping/: base_solver.py  casadi_uitl.py  double_link_solver.py  joint_mapping_config.py  numba_util.py  orientation_mapping.py
hurodes/mjcf_generator/: __init__.py  base_generator.py  generator_base.py  generator_composite.py  unified_generator.py
hurodes/mjcf_parser/: base_parser.py  unified_parser.py  without_waist_parser.py
hurodes/parsers/: __init__.py  base_parser.py  mjcf_parser.py  urdf_mujoco_parser.py  urdf_original_parser.py  urdf_parser.py
hurodes/scripts/: generate.py  generate_composite.py  parse.py
hurodes/urdf_generator/: __init__.py  generator_base.py  unified_generator.py
hurodes/utils/: config.py  convert.py  mesh.py  string.py
scripts/: ehdf2mjcf.py  generate.py  generate_composite.py  hedf2mjcf.py  mjcf2ehdf.py  opt_mesh.py  parse.py  urdf2mjcf.py
tests/: LICENSE  test_utils.py
tests/test_generators/: test_generator_base.py
tests/test_joint_mapping/: test_double_link_solver.py  test_joint_mapping_config.py  test_numba_util.py
tests/test_mjcf_generator/: test_generator_base.py  (+2 more)
(+43 files in other folders)
