[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "hurodes"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "pandas>=2.0",
    "colorama>=0.4.6",
    "click>=8.0",
    "mujoco>=3.3.0",
    "tqdm>=4.67.1",
    "trimesh>=4.6.10",
    "fast-simplification>=0.1.11",
]
requires-python = ">=3.9"
authors = [
    { name = "ZyuonRobotics" }
]
maintainers = [
    { name = "Honglong Tian" },
    { name = "Chun Li" }
]

[project.optional-dependencies]
dev = [
    "pytest"
]